--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Dokua Asiedu",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jsdom": "^24.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
