--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsdom": "^24.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "tailwindcss": "^3.4.3"
   }
 }
